# ros-workspace

./: .gitignore  .gitmodules  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  local_setup.sh
devel/include/rover/: DriveControls.h  GpsCoords.h
devel/include/ublox_msgs/: NavRELPOSNED.h  NavRELPOSNED9.h
devel/lib/joy/: joy_node
devel/lib/pkgconfig/: joy.pc  message_filters.pc  prototype.pc  ros_gui.pc  rosbag.pc  rosbag_storage.pc  roscpp.pc  rosgraph.pc  roslaunch.pc  roslz4.pc  rosmaster.pc  rosmsg.pc  rosnode.pc  rosout.pc  rosparam.pc  rospy.pc  rosservice.pc  rostest.pc  rostopic.pc  roswtf.pc  rover.pc  rover_control.pc  rover_phidgets.pc  spacenav_node.pc  ssrt_rover.pc  test_rosbag.pc  test_rosbag_storage.pc  test_roscpp.pc  test_rosgraph.pc  test_roslaunch.pc  test_roslib_comm.pc  test_rosmaster.pc  test_rosparam.pc  test_rospy.pc  test_rosservice.pc  test_rostest.pc  test_rostopic.pc  topic_tools.pc  tutorial.pc  ublox_gps.pc  (+4 more)
devel/lib/rosbag/: encrypt  play  record
devel/lib/rosout/: rosout
devel/lib/rover/: gps_mock  gps_service  gps_sim  hello  signal_service
devel/lib/spacenav_node/: spacenav_node
devel/lib/topic_tools/: demux  drop  mux  relay  switch_mux  throttle
devel/lib/ublox_gps/: ublox_logger
devel/lib/ublox_msg_filters/: example
devel/share/joy/cmake/: joyConfig.cmake
devel/share/message_filters/cmake/: message_filtersConfig.cmake
devel/share/prototype/cmake/: prototypeConfig.cmake
devel/share/ros_gui/cmake/: ros_guiConfig.cmake
devel/share/rosbag/cmake/: rosbagConfig.cmake
devel/share/rosbag_storage/cmake/: rosbag_storageConfig.cmake
devel/share/roscpp/cmake/: roscpp-msg-extras.cmake  roscpp-msg-paths.cmake  roscppConfig.cmake
devel/share/rosgraph/cmake/: rosgraphConfig.cmake
devel/share/roslaunch/cmake/: roslaunch-extras.cmake  roslaunchConfig.cmake
devel/share/roslz4/cmake/: roslz4Config.cmake
devel/share/rosmaster/cmake/: rosmasterConfig.cmake
devel/share/rosmsg/cmake/: rosmsgConfig.cmake
devel/share/rosnode/cmake/: rosnodeConfig.cmake
devel/share/rosout/cmake/: rosoutConfig.cmake
devel/share/rosparam/cmake/: rosparamConfig.cmake
devel/share/rospy/cmake/: rospyConfig.cmake
devel/share/rosservice/cmake/: rosserviceConfig.cmake
devel/share/rostest/cmake/: rostest-extras.cmake  rostestConfig.cmake
example/: CMakeLists.txt  package.xml
install/: .rosinstall  local_setup.sh  setup.sh
install/include/rover/: SignalStatus.h  Vector3.h
install/lib/pkgconfig/: prototype.pc  rosserial_arduino.pc  rosserial_chibios.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_vex_cortex.pc  rosserial_vex_v5.pc  rosserial_windows.pc  rosserial_xbee.pc  rover.pc  rover_control.pc  rover_phidgets.pc  ssrt_rover.pc  ublox_gps.pc  ublox_msg_filters.pc  ublox_msgs.pc  ublox_serialization.pc
install/lib/prototype/: subscriber.py  talker.py
install/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
install/lib/rover_control/: control.py  drive.py
install/lib/ublox_gps/: ublox_logger
install/share/prototype/: package.xml
install/share/prototype/cmake/: prototypeConfig.cmake
install/share/rover_control/: package.xml
install/share/rover_phidgets/: package.xml
logs/rosserial_windows/: build.cmake.000.log.stderr
logs/rover/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr
src/: CMakeLists_Template.txt  README.md  git-maintenance.txt  ros-installations.md  ros-installations.txt
src/docs/: vscode setup.md
src/prototype/: CMakeLists.txt
src/prototype/scripts/: imu_msgs_subscriber.py  subscriber.py
src/ros_gps/: CMakeLists.txt  package.xml
src/ros_gps/config/: gps_test.yaml
src/ros_gps/launch/: rover_gps.launch
src/ros_gps/src/: ros_gps_node.cpp
src/ros_gui/: CMakeLists.txt
src/ros_gui/launch/: video-stream.launch
src/rover/: CMakeLists.txt
src/rover/vehicle/: GpsLocationService.cpp
src/rover_control/: CMakeLists.txt  TODOs.md  TODOs.txt  package.xml
src/rover_control/include/: DCMotor.h  DCMotorException.h  DCMotorManager.h  DriveManager.h  Teleop.h
src/rover_control/include/controllers/: DriveManager.h  PhidgetCommon.h  Teleop.h
src/rover_control/include/exceptions/: DCMotorException.h  PhidgetException.h  RuntimeException.h
src/rover_control/include/motors/: DCMotor.h  StepperMotor.h
src/rover_control/include/sensors/: IMU.h
src/rover_control/launch/: IMU-pub.py  arm-test.launch  arm.launch  control-parallels-remote.launch  control-parallels.launch  control-test.launch  control.launch  cpt.launch  example.launch  joy-launch.launch
src/rover_control/launch/controls/: drive_controls.launch
src/rover_control/msg/: Drive.msg
src/rover_control/scripts/: Arm-Node.py  ArmBaseTest.py  ArmControl.py  ArmNode.py  DCMotor.cpp  DCMotorException.cpp  DCMotorManager.cpp  DriveManager.cpp  DriveNode.cpp  Motor.cpp  Publisher-Example.cpp  Publisher-Example.py  Subscriber-Example.py  TeleopNode.cpp  arm-control.py  arm-teleop.py  arm_teleop2.py  control.cpp  control.py  controller-test.py  drive.cpp  drive.py  drive2.py  joy-test-2.py  joy-test.py  remote_test.py  rocctest.cpp
src/rover_control/scripts/controllers/: DriveManager.cpp  PhidgetCommon.cpp  TeleopNode.cpp
src/rover_control/scripts/exceptions/: DCMotorException.cpp  PhidgetException.cpp  RuntimeException.cpp
src/rover_control/scripts/main_files/: DriveNode.cpp  TeleopMain.cpp
src/rover_control/scripts/motors/: DCMotor.cpp  StepperMotor.cpp
src/rover_control/scripts/sensors/: IMU.cpp
src/rover_core/: CMakeLists.txt
src/rover_core/launch/: main.launch  mini.launch  phidgets.launch  sensors.launch
src/rover_phidgets/: CMakeLists.txt
src/rover_phidgets/scripts/: DataLCD.py
src/rqt_plugins/launch/: video-stream.launch
src/tutorials/: CMakeLists.txt  package.xml
src/tutorials/src/: listener.cpp  talker.cpp  tutorial.launch  tutorial_listener.launch  tutorial_talker.launch
(+239 files in other folders)
