<package format="2">
    <name>rover_control</name>
    <version>0.0.1</version>
    <description>Control systems for the rover</description>
    <maintainer email="cartermar211@gmail.com">Carter Marcelo</maintainer>
    <license>TODO</license>
    <url type="code">https://github.com/ucalgary-rover/ros-workspace</url>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_export_depend>rospy</build_export_depend>
    <exec_depend>rospy</exec_depend>
    <build_depend>roscpp</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>roscpp</exec_depend>    
    <build_depend>std_msgs</build_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>std_msgs</exec_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <build_depend>libphidget22</build_depend>
    <build_export_depend>libphidget22</build_export_depend>
    <exec_depend>libphidget22</exec_depend>
</package>
